--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-file": {},
             "cordova-plugin-media-capture": {},
-            "cordova-plugin-x-socialsharing": {}
+            "cordova-plugin-x-socialsharing": {},
+            "cordova-plugin-app-version": {}
         }
     },
     "dependencies": {
         "cordova-android": "^6.3.0",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-camera": "^2.3.0",
         "cordova-plugin-compat": "~1.1.0",
         "cordova-plugin-console": "~1.0.7",
