--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "displayName": "AwriMobile",
     "cordova": {
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ],
         "plugins": {
             "cordova-plugin-console": {},
@@ -20,12 +21,16 @@
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-file": {},
             "cordova-plugin-media-capture": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-speechrecognition": {},
+            "cordova-plugin-app-version": {},
             "cordova-plugin-x-socialsharing": {},
-            "cordova-plugin-app-version": {}
+            "cordova-plugin-splashscreen": {}
         }
     },
     "dependencies": {
         "cordova-android": "^6.3.0",
+        "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-camera": "^2.3.0",
@@ -34,11 +39,14 @@
         "cordova-plugin-device": "~1.1.6",
         "cordova-plugin-dialogs": "~1.3.3",
         "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-geolocation": "~2.4.3",
         "cordova-plugin-inappbrowser": "^1.7.2",
         "cordova-plugin-media-capture": "^3.0.1",
         "cordova-plugin-network-information": "~1.3.3",
         "cordova-plugin-printer": "^0.7.3",
+        "cordova-plugin-speechrecognition": "^1.2.0",
+        "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-vibration": "~2.1.5",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-plugin-x-socialsharing": "^5.2.1",
